<resources>
    <string name="app_name">Polyclinic</string>
    <string name="stub">TODO</string>

    <string name="please_await">Подождите, идет загрузка…</string>
    <string name="exit_session">СМЕНИТЬ ПОЛЬЗОВАТЕЛЯ</string>
    <string name="exit">ВЫХОД</string>

    <!--Auth-->
    <string name="password_change_canceled">Пароль не изменен</string>
    <string name="done_change_password">Пароль изменен</string>
    <string name="done_new_password">Пароль назначен</string>
    <string name="password_not_assigned">Пароль не назначен</string>
    <string name="need_one_numeral">Требуется минимум одна цифра</string>
    <string name="need_one_letter">Требуется минимум одна буква</string>
    <string name="size_password_invalid">Пароль должен состоять не менее чем из 6 алфавитно-цифровых символов</string>

    <string name="input_current_password">Введите пароль (минимум 6 буквенно-цифровых символов)</string>
    <string name="change_local_password">ИЗМЕНИТЬ ПАРОЛЬ</string>
    <string name="sing_in">Войти</string>

    <string name="change_current_password">Введите действующий пароль (минимум 6 буквенно-цифровых символов)</string>
    <string name="input_new_password">Введите новый пароль. Требуется не менее 6 буквенно-цифровых символов</string>
    <string name="repeat_input_new_password">Повторите ввод нового пароля</string>
    <string name="cancel_password">ОТМЕНИТЬ</string>
    <string name="save_password">СОХРАНИТЬ ПАРОЛЬ</string>

    <string name="invalid_password">Неверный пароль</string>
    <string name="require_password">Не введен пароль</string>
    <string name="password_invalidate_duplicate">Пароли не совпадают</string>

    <string name="empty_list_holder_description">Отсутствуют зарегистрированные пользователи!</string>
    <string name="search">Поиск</string>
    <string name="users">Пользователи</string>
    <string name="log_out">ВЫЙТИ</string>
    <string name="authorization_description">Выберите свою учётную запись</string>
    <string name="not_log_put">НЕ МОГУ ВОЙТИ</string>
    <string name="last">Последние</string>
    <string name="all">Все</string>
    <string name="doctors">Врачи</string>
    <string name="registry">Регистратура</string>
    <string name="patients">Пациенты</string>
    <string name="profile">Профиль</string>
    <string name="appointment">Приём</string>
    <string name="record">Запись</string>

    <!-- Common -->
    <string name="errorHappened">Произошла ошибка"</string>
    <string name="titleProfile">Ваш профиль</string>
    <string name="cancel">ОТМЕНИТЬ</string>
    <string name="cancelConsultation">ОТМЕНИТЬ ЗАПИСЬ</string>
    <string name="consultationCancelled">ЗАПИСЬ ОТМЕНЕНА (ЗАКРЫТЬ)</string>
    <string name="saveConsultation">СОХРАНИТЬ</string>
    <string name="closeConsultation">ЗАКРЫТЬ</string>
    <string name="startConsultation">НАЧАТЬ ПРИЕМ</string>
    <string name="undo">СБРОСИТЬ ВВОД</string>
    <string name="save">СОХРАНИТЬ</string>
    <string name="titleConsultationPatient">Пациент:</string>
    <string name="titleConsultationDoctor">Специалист:</string>
    <string name="titleConsultation">Запись:</string>
    <string name="titleFactConsultation">Ход приёма:</string>

    <!-- Registry -->
    <string name="profileUpdated">Профиль обновлён!</string>
    <string name="hintSurname">Введите фамилию</string>
    <string name="hintName">Введите имя</string>
    <string name="hintFathersName">Введите отчество</string>
    <string name="hintLogin">Введите логин</string>
    <string name="fieldMustNotBeEmpty">Поле не должно быть пустым!</string>
    <string name="loginIsNotUnique">Такой логин существует!</string>

    <!-- Doctor -->
    <string name="skillLevelHint">Должность</string>
    <string name="workExperienceYearsHint">Опыт работы</string>
    <string name="berthDateHint">Дата рождения</string>
    <string name="phoneHint">Номер телефона</string>
    <string name="qualifications">Квалификации:</string>
    <string name="qualification">Квалификация</string>
    <string name="whoCreatedHint">Запись создал(а)</string>
    <string name="plannedStartTimeHint">Прием по плану</string>
    <string name="factStartTimeHint">Фактическое начало приёма</string>
    <string name="factEndTimeHint">Приём завершился</string>
    <string name="additionalNotesHint">Дополнительная информация</string>
    <string name="chooseCompetence">Выберете компетенцию</string>
    <string name="procedures">Услуги:</string>

    <!-- Patient -->
    <string name="hintPassport">Номер пасспорта</string>
    <string name="hintOms">Номер полиса ОМС</string>
    <string name="hintWeight">Вес, кг</string>
    <string name="hintHeight">Рост, см</string>
    <string name="hintSnils">Номер СНИЛС</string>

    <string name="hintSurnameNotInput">Фамилия</string>
    <string name="hintNameNotInput">Имя</string>
    <string name="hintFathersNameNotInput">Отчество</string>


    <!-- Recording -->
    <string name="titleRecording">Запись на прием</string>
    <string name="choosePatientButton">ВЫБРАТЬ ПАЦИЕНТА</string>
    <string name="dateNotChosen">ДАТА</string>
    <string name="dateChosen">Дата %s</string>
    <string name="makeRecord">ЗАПИСАТЬСЯ</string>
    <string name="titleChoosePatient">Выберите пациента</string>
    <string name="chooseFilterType">Тип фильтра</string>
    <string name="recordCreated">Запись успешно сохранена!</string>
    <string name="hintReasonForRecord">Причина для обращения</string>
    <string name="berthDateFieldValue">Дата рождения: %s</string>
    <string name="omsFiledValue">ОМС: %s</string>
    <string name="chooseTomorrowOrLater">Выберите дату начиная с завтрашнего дня</string>
    <string name="durationItemText">К %s, продолжительность 30 минут</string>
    <string name="futureConsultations">Запланированные</string>
    <string name="pastConsultations">Прошедшие</string>
    <string name="competenceConsultationInfo">Направление: %s</string>
    <string name="competenceConsultationInfoCancelled">Направление: %s (ОТМЕНЕНО)</string>
    <string name="patientConsultationInfo">Пациент: %s</string>
    <string name="doctorConsultationInfo">Специалист: %s</string>
    <string name="dateTimeConsultationInfo">Дата %s</string>
    <string name="creatorConsultationInfo">Записал(а): %s</string>
    <string name="agreementDialogTitle">Подтвердите действие</string>
    <string name="confirm">Согласиться</string>
    <string name="cancelDialogButton">Отказаться</string>
    <string name="undoAlertMessage">Все введенные Вами данные будут потеряны, Вы уверены?</string>
    <string name="saveAlertMessage">Приём будет завершен. Данные будут сохранены, экран закроется. Возможность редактировать данные будет утеряна. Вы согласны?</string>
    <string name="cancelAlertMessage">Проведение приёма будет отменено. Восстановление будет невозможно. Данный экран будет закрыт и Вы вернетесь к списку. Вы подтверждаете данное действие?</string>
    <string name="notPassed">Приём не завершен</string>
    <string name="notStarted">Приём не проводился</string>
    <string name="notPermitted">Нет доступа к результатам</string>

</resources>
